ch 1-3 white space fix?

--- a/css/intro/intro-narrower.css
+++ b/css/intro/intro-narrower.css
@@ -140,13 +140,12 @@ button:active {
   width: 101%;
   padding-left: 8px;
   margin-left: -8px;
-  right: 0;
   height: auto;
-  margin-top: 40px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: -35px;
   padding-bottom: 40px;
   padding-top: 30px;
-  z-index: 10;
-  position: relative;
 }
 
 
